# cppimagefilterbase

./: BWFiltrator.cpp  BWFiltrator.h  BlurFiltrator.cpp  BlurFiltrator.h  CMakeLists.txt  CMakeSettings.json  ConfigParser.cpp  ConfigParser.h  ConvBlurStrategy.cpp  ConvBlurStrategy.h  ConvEdgeStrategy.cpp  ConvEdgeStrategy.h  ConvFancyBlurStrategy.cpp  ConvFancyBlurStrategy.h  ConvKer.cpp  ConvKer.h  ConvStrategy.h  Convolution.cpp  Convolution.h  EdgeFiltrator.cpp  EdgeFiltrator.h  FancyBlurFiltrator.cpp  FancyBlurFiltrator.h  FancyThresholdFiltrator.cpp  FancyThresholdFiltrator.h  Filter.cpp  Filter.h  FilterBase.cpp  FilterBase.h  FilterRect.cpp  FilterRect.h  Filtrator.h  FragmFiltrator.cpp  FragmFiltrator.h  Fragmentation.cpp  Fragmentation.h  ImagePixels.cpp  ImagePixels.h  NeighborGetter.cpp  NeighborGetter.h  (+22 more)
example/: Thumbs.db  config.txt
