cmake_minimum_required(VERSION 2.8)

project(student_toolkit)
add_executable(${PROJECT_NAME} "png_toolkit.cpp" "png_toolkit.h"
    "stb_image.h" "stb_image_write.h" 
	"ConfigParser.h" "ConfigParser.cpp" 
	"Filter.h" "Filter.cpp" 
	"FilterRect.h" "FilterRect.cpp" 
	"Filtrator.h" 
	"RectAdapter.h" "RectAdapter.cpp"
	"RedFiltrator.h" "RedFiltrator.cpp" 
	"RealRect.h" 
	"ImagePixels.h" "ImagePixels.cpp" 
	"PNGCortege.h" "PNGCortege.cpp"
	"ConvKer.h" "ConvKer.cpp"
	"Convolution.h" "Convolution.cpp"
	"ConvStrategy.h"
	"ConvBlurStrategy.h" "ConvBlurStrategy.cpp"
	"BlurFiltrator.h" "BlurFiltrator.cpp"
	"BWFiltrator.h" "BWFiltrator.cpp"
	"EdgeFiltrator.h" "EdgeFiltrator.cpp"
	"SingleCompImage.h" "SingleCompImage.cpp"
	"ConvEdgeStrategy.h" "ConvEdgeStrategy.cpp"
	"ConvFancyBlurStrategy.h" "ConvFancyBlurStrategy.cpp"
	"main.cpp")
